# cpuinfo_cmake

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  vcpkg.json  version.json
.github/: SECURITY.md
.github/workflows/: build-on-windows.yml  cleanup-workflows.yml
cmake/: SetupCompileOptions.cmake
data/: cpuinfo.cmake.tpl
src/: cpuinfo.cpp  escaper.cpp
test/: CMakeLists.txt  CMakePresets.json
test/cmake/: SetupCompileOptions.cmake
test/src/: hello_cpuinfo.cpp
